# ai-dev-operating-system

./: .gitignore  README.md  pyproject.toml
blog/: BLOG_POST.md
docs/: agent-catalog.md  architecture.md  building-your-own.md
src/ai_dev_os/: __init__.py  cli.py
src/ai_dev_os/gsd/: __init__.py  assumptions.py  evidence.py  phases.py
src/ai_dev_os/omc/: __init__.py  catalog.py  catalog.yaml  routing.py  state.py
src/ai_dev_os/ralph_loop/: __init__.py  loop.py  state.py  stop_hook.sh
src/ai_dev_os/ralplan/: __init__.py  critic.py  deliberate.py  planner.py
src/ai_dev_os/specum/: __init__.py  pipeline.py
src/ai_dev_os/specum/stages/: __init__.py  design.py  implement.py  requirements.py  tasks.py  verify.py
src/ai_dev_os/team_pipeline/: __init__.py  pipeline.py  stages.py
